<resources>
    <string name="app_name">Hadam games</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="app_name2">formulario</string>
    <string name="dsd" />
    <string name="titulo">Formulario de registro</string>
    <string name="Name2">Name</string>
    <string name="email2">Email</string>
    <string name="telefono">Telefono</string>
    <string name="password2">Password</string>
    <string name="confirmar_password">Confirmar password</string>
    <string name="guardar">Guardar</string>
    <string name="error_contrasena">Las contraseñas no coinciden</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="cine">Cine</string>
    <string name="videojuegos">Videojuegos</string>
    <string name="cocinar">Cocinar</string>
    <string name="ciudad_nacimiento">CIudad de nacimiento</string>
    <string name="fecha">DD/MM/YY</string>
    <string name="genero">Genero</string>
    <string name="perfil">Perfil</string>
    <string name="novedades">Novedades</string>
    <string name="tienda">Tienda</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="eventos">Eventos</string>


    <string-array name="lista_ciudades">
        <item>Seleccione una ciudad</item>
        <item>Barranquilla</item>
        <item>Bogota</item>
        <item>Cali</item>
        <item>Medellin</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="mensaje">Mensajes</string>
    <string name="notificacion">"notificaciones "</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_novedades">Novedades</string>
    <string name="title_tienda">Tienda</string>
    <string name="title_evento">Eventto</string>
    <string name="title_Biblioteca">Biblioteca</string>
    <string name="datos_personales">Datos personales</string>


</resources>