<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".MainActivity"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:shadowColor="#FFFFFF"
            android:text="@string/titulo"
            android:textColor="@color/fondo_app"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/Name2"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="18dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="2dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_confirmar_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:hint="@string/confirmar_password"
            android:inputType="textPassword" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/genero"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rb_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/rb_femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/femenino" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_margin="2dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_fecha"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_month" />

            <TextView
                android:id="@+id/tv_fecha"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/fecha" />
        </LinearLayout>

        <Spinner
            android:id="@+id/sp_ciudad_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginBottom="0dp"
            android:entries="@array/lista_ciudades"
            android:padding="20dp" />

        <Button
            android:id="@+id/bt_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/guardar" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>